2.1.1 / 2013-03-25

* Enhancements

  * Work with new roo - thanks @towerhe !

2.1.0 / 2012-10-01

* Enhancements

  * Allow import of ESRI shapefiles

2.0.2 / 2012-06-20

* Secrets revealed

  * Indeed it is OK to omit the file:// as long as you are using an absolute path to a local file... e.g., RemoteTable.new('/path/to/foo')

* Bug fixes

  * Don't bork UTF-8 by incorrectly treating \xAD as a soft hyphen

2.0.1 / 2012-05-16

* Enhancements

  * For single-string transliteration to UTF-8, use ActiveSupport::Inflector.transliterate instead of Iconv - possibly a future-proof solution.
  * For whole-file transliteration to UTF-8, warn users if iconv binary is not available in their $PATH.

2.0.0 / 2012-05-08

* Breaking changes

  * New names for options... (not really breaking, these deprecated options are still accepted)
    :errata -> :errata_settings
    :transform -> :transform_settings
    :select -> :pre_select (to avoid conflict with Enumerable#select)
    :reject -> :pre_reject
    :encoding -> :internal_encoding

* Enhancements

  * Every option is documented
  * Refactored to simplify and DRY
  * Thread safe

1.4.0 / 2012-04-12

* Enhancements

  * DRY up spawning code with UnixUtils
  * Switch to minitest
  * Stop defining MyCSV globally
  * Test on MRI 1.8.7, MRI 1.9.3, and JRuby 1.6.7
  * Warn users about ODS not working on JRuby
  * Move all warnings to Kernel.warn
  * Start keeping a CHANGELOG!
  * Ensure we clean up temporary files

* Bug fixes

  * Make sure headers (keys) on rows created with Roo are ordered in Ruby 1.8.7
  * Make tests green (for now) by fixing URLs and sometimes :row_xpaths (hello FAA aircraft lookup guide)
  * Use Hash#fetch for default options
  * Don't try to set default_sheet if user doesn't specify a sheet name