@@ -50,8 +50,8 @@ describe RemoteTable do
                           :encoding => 'windows-1252',
                           :row_xpath => '//table[2]//table[1]//tr[3]//tr',
                           :column_xpath => 'td',
-                          :errata => { :url => 'http://spreadsheets.google.com/pub?key=tObVAGyqOkCBtGid0tJUZrw',
-                                       :responder => AircraftGuru.new }
+                          :errata => Errata.new(:url => 'http://spreadsheets.google.com/pub?key=tObVAGyqOkCBtGid0tJUZrw',
+                                       :responder => AircraftGuru.new)
       g1 = t.rows.detect { |row| row['Model'] =~ /Gulfstream I/ }
       g1.wont_be_nil
       g1['Manufacturer'].must_equal 'GULFSTREAM AEROSPACE'
